# python-libreoffice-pip

./: .gitignore  =5.9.5  Makefile  README.md  app.py  cspell.json  ext.update.xml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/lo_only/: Dockerfile  docker-compose.yml
.devcontainer/lo_sdk/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/res/defaults/: registrymodifications.xcu
Documents/: status.odt
oxt/: LICENSE-en.txt  XTest.rdb  description.xml  job.xcu  py_runner.py  requirements.txt
oxt/___lo_pip___/: basic_config.py  config.py  initializer.py
oxt/___lo_pip___/debug/: break_mgr.py
oxt/___lo_pip___/dialog/: count_down_dialog.py  dialog_base.py  infinite_progress.py  logger_options.py  message_dialog.py  name_input.py  run_time_dialog_base.py  temp_dialog.py
oxt/___lo_pip___/dialog/handler/: logger_options.py  uninstall.py
oxt/___lo_pip___/events/args/: event_args.py
oxt/___lo_pip___/events/named_events/: __init__.py  configuration_named_event.py
oxt/___lo_pip___/info/: extension_info.py
oxt/___lo_pip___/input_output/: proc.py
oxt/___lo_pip___/install/: download.py  install_pip.py  install_pip_from_wheel.py  install_pkg.py  install_pkg_local.py  install_wheel.py  progress.py  requirements_check.py
oxt/___lo_pip___/install/extras/: extra.py
oxt/___lo_pip___/install/pip_installers/: base_installer.py  default_installer.py  flatpak_installer.py
oxt/___lo_pip___/install/pkg_installers/: install_pkg.py  install_pkg_flatpak.py  install_pkg_win.py
oxt/___lo_pip___/install/progress_window/: progress_rules.py
oxt/___lo_pip___/install/py_packages/: packages.py
oxt/___lo_pip___/install/term/: gnome_terminal.py  mac_terminal.py  progress_dialog.py  term_proto.py  term_rules.py  win_terminal.py
oxt/___lo_pip___/lo_util/: configuration.py  resource_resolver.py  util.py
oxt/___lo_pip___/oxt_logger/: logger_config.py  oxt_logger.py
oxt/___lo_pip___/settings/: general_settings.py  pip_settings.py  settings.py
oxt/___lo_pip___/thread/: killable_thread.py
oxt/___lo_pip___/ver/: req_version.py
oxt/___lo_pip___/ver/rules/: carrot.py  equals.py  greater_equal.py  lesser_equal.py  tilde.py  ver_rules.py  wildcard.py
oxt/config/: config.xcs  config.xcu  options.xcu
oxt/dialogs/: logging.xdl  pip.xdl
oxt/lo_pip/: config.json  config.py
oxt/lo_pip/info/: extension_info.py
oxt/lo_pip/input_output/: file_util.py
oxt/lo_pip/install/: detect.py  download.py  install_pip.py  install_pip_from_wheel.py  install_pip_wheel.py  install_pkg.py
oxt/lo_pip/install/pip_installers/: base_installer.py  default_installer.py  flatpak_installer.py
oxt/lo_pip/install/pkg_installers/: install_pkg.py  install_pkg_flatpak.py
oxt/lo_pip/lo_util/: __init__.py  util.py
oxt/lo_pip/oxt_logger/: oxt_logger.py
oxt/lo_pip/utils/: ver_comp.py  ver_info.py
oxt/lo_pip/ver/: req_version.py
oxt/lo_pip/ver/rules/: carrot.py  equals.py  greater.py  greater_equal.py  lesser.py  lesser_equal.py  not_equals.py  tilde.py  ver_proto.py  ver_rules.py  wildcard.py
oxt/pythonpath/: pip_hello_world.py
oxt/pythonpath/lo_pip/: config.py
oxt/resources/: pipstrings_de.properties  pipstrings_el.properties  pipstrings_en_US.properties  pipstrings_es.properties  pipstrings_fr.properties  pipstrings_hu.properties  pipstrings_it.properties  pipstrings_ja.properties  pipstrings_ko.properties  pipstrings_nl.properties  pipstrings_pt.properties  pipstrings_zh.properties
oxt/scripts/: mac_progress.py
oxt/sources/: XTest.idl
src/: build.py  config.py  file_util.py
src/install/: pip_install_build.py  pip_install_wheel.py  pre_install_wheel.py
src/processing/: json_config.py  packages.py  pre_packages.py  req_packages.py  token.py  update.py
src/zaz/: easymacro.py
tests/: test_version.py  test_version_comp.py
tests/general_tests/: test_packages.py
tests/test_rules/: test_carrot.py  test_equals.py  test_greater.py  test_greater_equal.py  test_lesser.py  test_lesser_equal.py  test_not_equals.py  test_tilde.py  test_ver_rules.py  test_wildcard.py
